--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="./images/viewsonic.png" alt="viewsonic">
         <img src="./images/reto og.png" alt="reto">
         <img src="./images/wala.png" alt="wala">
-        <img src="/images/school.png" alt="school">
+        <img src="./images/school.png" alt="school">
     </div>
     <script src="./index.js"></script>
 
